2006-02-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-saver.c:
	* gedit/gedit-window.c:
	* gedit/sexy-icon-entry.c:
	* plugins/docinfo/gedit-docinfo-plugin.c:

	fix some C99-style variable initializations, patch by Jens Granseuer.

2006-01-30  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-file-chooser-dialog.c: add some application/x-foo
	mime types to the "All text files" white list. Spotted Mathieu Pillard.

2006-01-31  Michael Terry  <mterry@cvs.gnome.org>

	* gedit/gedit.c:
	* configure.ac:

	Convert from popt to goption (bug 329375).

=== gedit 2.13.90 ===

2006-01-30  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.13.90 released

2006-01-30  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-python-module.c: be robust to python modules import
	failure.

2006-01-30  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-saver.c: remove the temporary backup in the
	fallback saving strategy if the user specified that he doesn't want
	backup files to be kept. (bug 329178)

2006-01-30  Paolo Borelli  <pborelli@katamail.com>

	* gedit/recent-files/*: sync with libegg.

2006-01-29  Steve Frécinaux  <steve@istique.net>

	* gedit/gedit-view.c: hide cursor when interactive search is active

2006-01-27  Paolo Borelli  <pborelli@katamail.com>

	* remove outdated files, patch by Stephane Loeuillet.

2006-01-21  Paolo Borelli  <pborelli@katamail.com>

	* data/gedit-desktop.in.in: add GNOME/GTK categories to the
	.desktop file. (bug 328013)

2006-01-21  Steve Frécinaux  <steve@istique.net>

	* plugins/externaltools/tools/functions.py: implement applicability
	(gray unusable tools, allow to run a command on unsaved document)
	* plugins/externaltools/tools/__init__.py: adapt for applicability;
	remove debug message
	* plugins/externaltools/tools/manager.py: correct a bug related to
	keyboard navigation; allow reordering the tools in the tree and in the