@@ -1,3 +1,8 @@
+2006-02-04  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-document.c: disable bracket matching during replace_all,
+	in order to avoid wasting time. Patch by James Livingston.
+
 2006-02-01  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-document-saver.c:
